--- a/app/react/App/scss/layout/_nav.scss
+++ b/app/react/App/scss/layout/_nav.scss
@@ -46,5 +46,5 @@ nav ul {
 
 .nav>li>a {
   padding: 6px 10px;
-  margin-top: 5px;
+  line-height: 44px;
 }
